ADD ENDPOINT GET RESULT
