# src/Controller/ApiResultController.php
@@ -159,4 +159,51 @@ class ApiResultController extends AbstractController
             $format
         );
     }
+
+    /**
+     * Summary: Returns a result based on a single ID
+     * Notes: Returns the result identified by &#x60;resultId&#x60;.
+     *
+     * @param Request $request
+     * @param  int $resultId Result id
+     * @return Response
+     * @Route(
+     *     "/{resultId}.{_format}",
+     *     defaults={ "_format": null },
+     *     requirements={
+     *          "resultId": "\d+",
+     *          "_format": "json|xml"
+     *     },
+     *     methods={ Request::METHOD_GET },
+     *     name="get"
+     * )
+     *
+     * @Security(
+     *     expression="is_granted('IS_AUTHENTICATED_FULLY')",
+     *     statusCode=401,
+     *     message="Invalid credentials."
+     * )
+     */
+    public function getResult(Request $request, int $resultId): Response
+    {
+        $result = $this->entityManager
+            ->getRepository(Result::class)
+            ->find($resultId);
+        $format = Utils::getFormat($request);
+
+        if (empty($result)) {
+            $message = new Message(Response::HTTP_NOT_FOUND, Response::$statusTexts[404]);
+            return Utils::apiResponse(
+                $message->getCode(),
+                [ 'message' => $message ],
+                $format
+            );
+        }
+
+        return Utils::apiResponse(
+            Response::HTTP_OK,
+            [ 'result' => $result ],
+            $format
+        );
+    }
 }
